명언데이터, react-countup, canvas-confetti 세팅

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,19 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
+
+    <!-- canvas-confetti -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+
+    <!-- 명언데이터 -->
+    <script src="https://jhs512.github.io/wise_saying/data.js"></script>
+    <script>
+      window.wiseSayings = wiseSayings;
+    </script>
   </head>
   <body>
     <div id="root"></div>
+    <!-- confetti-canvas -->
+    <canvas id="confetti-canvas"></canvas>
   </body>
 </html>
